[gd_scene load_steps=15 format=3 uid="uid://l8xywpsx13r"]

[ext_resource type="PackedScene" uid="uid://crd5xklohw1gu" path="res://Resources/Corpo2D/Corpo2D.tscn" id="1_305kj"]
[ext_resource type="Texture2D" uid="uid://bcoe2w5fr72b1" path="res://Assets/swampy_anim_f0.png" id="2_0sb35"]
[ext_resource type="Script" path="res://inimigos/toxico/inimigo_toxico.gd" id="2_hejvi"]
[ext_resource type="Texture2D" uid="uid://bqweptjqgutpm" path="res://Assets/swampy_anim_f1.png" id="3_scfl4"]
[ext_resource type="Texture2D" uid="uid://dmscrutcf7jug" path="res://Assets/swampy_anim_f2.png" id="4_yqlvk"]
[ext_resource type="Texture2D" uid="uid://bjo10apocvjpy" path="res://Assets/swampy_anim_f3.png" id="5_a3o2m"]
[ext_resource type="Script" path="res://inimigos/toxico/idle.gd" id="6_hxnfv"]
[ext_resource type="Script" path="res://inimigos/toxico/walk.gd" id="7_cms3s"]
[ext_resource type="Texture2D" uid="uid://xija5odi6w17" path="res://textura_chama_4px.png" id="9_ra7hr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6rtv"]
size = Vector2(12, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_opic2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0sb35")
}, {
"duration": 1.0,
"texture": ExtResource("3_scfl4")
}, {
"duration": 1.0,
"texture": ExtResource("4_yqlvk")
}, {
"duration": 1.0,
"texture": ExtResource("5_a3o2m")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wt4jg"]
radius = 80.0062

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1735d"]
size = Vector2(11, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_v8ln1"]
radius = 25.0799

[node name="InimigoToxico" instance=ExtResource("1_305kj")]
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 0
script = ExtResource("2_hejvi")

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_o6rtv")

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_opic2")
animation = &"idle"
frame_progress = 0.46269

[node name="StateMachine" parent="." index="2" node_paths=PackedStringArray("starting_state")]
starting_state = NodePath("idle")

[node name="idle" parent="StateMachine" index="0" node_paths=PackedStringArray("walk")]
unique_name_in_owner = true
script = ExtResource("6_hxnfv")
walk = NodePath("../walk")
animation_name = "idle"

[node name="walk" type="Node" parent="StateMachine" index="1" node_paths=PackedStringArray("idle")]
unique_name_in_owner = true
script = ExtResource("7_cms3s")
idle = NodePath("../idle")
animation_name = "idle"
move_speed = 75.0

[node name="AreaObservacao" type="Area2D" parent="." index="3"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaObservacao" index="0"]
visible = false
shape = SubResource("CircleShape2D_wt4jg")

[node name="AreaDano" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDano" index="0"]
visible = false
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_1735d")

[node name="AreaToxica" type="Area2D" parent="." index="5"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaToxica" index="0"]
shape = SubResource("CircleShape2D_v8ln1")

[node name="CPUParticles2D" type="CPUParticles2D" parent="AreaToxica" index="1"]
amount = 10
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource("9_ra7hr")
emission_shape = 1
emission_sphere_radius = 28.0
gravity = Vector2(0, -50)
color = Color(2.23808e-06, 0.490135, 0, 1)

[connection signal="body_entered" from="AreaObservacao" to="StateMachine/idle" method="_on_area_observacao_body_entered"]
[connection signal="body_exited" from="AreaObservacao" to="StateMachine/walk" method="_on_area_observacao_body_exited"]
[connection signal="area_entered" from="AreaDano" to="." method="_on_area_dano_area_entered"]
